src/objects/ATC_AST_Questions__c.object
<CustomObject>
    <description>General questions and their respective configuration.</description>
    <fields>
        <fullName>ATC_AST_Assessment__c</fullName>
        <inlineHelpText>Select the Assessment to which that question belongs.</inlineHelpText>
        <label>Assessment</label>
        <referenceTo>ATC_AST_Assessment__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ATC_AST_QuestionBody__c</fullName>
        <inlineHelpText>Ask to show the person who answers the assessment.</inlineHelpText>
        <label>Question Body</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ATC_AST_QuestionType__c</fullName>
        <inlineHelpText>Type of answers you may have this question.</inlineHelpText>
        <label>Question Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkboxes</fullName>
                </value>
                <value>
                    <fullName>Multiple Choice</fullName>
                </value>
                <value>
                    <fullName>Paragraph</fullName>
                </value>
                <value>
                    <fullName>Short Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cuestion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>